--- a/KGERP/Views/Configuration/CommonRawProduct.cshtml
+++ b/KGERP/Views/Configuration/CommonRawProduct.cshtml
@@ -17,7 +17,7 @@
 </style>
 <section class="content-header">
     <h1>
-        New Material Item atik
+        New Material Item
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
